Finshed up with the top header section.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         <div class="subcontainer">
             <div class="subcontainer-left">
-                <p>This website is awesome</p>
-                <p>This website has some subtext here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button><a href="">Sign Up</a></button>
+                <span class="main-text">This website is awesome</span>
+                <span class="secondary-text"><p>This website has some subtext here under the main title. It's a smaller font and the color is lower contrast.</p></span>
+                <button class="sign-up"><a href="">Sign Up</a></button>
             </div>
             <div class="subcontainer-right">
                 This is a placeholder for an image
@@ -29,6 +29,7 @@
         </div>
     </div>
     <div class="container-two">
+        <span class="information-text">Some random information.</span>
     </div>
     <div class="container-three">
     </div>
