--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
     </div>
     <div class="container-two">
         <span class="information-text">Some random information.</span>
+        <div class="pictures-container">
+            <div class="picture">
+                <div class="picture-template"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="picture">
+                <div class="picture-template"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="picture">
+                <div class="picture-template"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="picture">
+                <div class="picture-template"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="container-three">
     </div>
