--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container-one">
+    <div class="container" id="one">
         <div class="header">
             <div class="text">Header Logo</div>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
         </div>
         <div class="subcontainer">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="container-two">
+    <div class="container" id="two">
         <span class="information-text">Some random information.</span>
         <div class="pictures-container">
             <div class="picture">
@@ -49,12 +49,23 @@
             </div>
         </div>
     </div>
-    <div class="container-three">
+    <div class="container" id="three">
+        <div class="quote-box">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quotee"><p>-Thor, God of Thunder</p></div>
+        </div>
     </div>
-    <div class="container-four">
+    <div class="container" id="four">
+        <div class="subcontainer-four">
+            <div class="call-to-action">
+                <div class="text1">Call to action! It's time!</div>
+                <div class="text2">Sign up for our product by clicking that button over there!</div>
+            </div>
+            <button class="sign-up-four">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-        Copyright @ Sjlozano06
+        Copyright &copy; Sjlozano06
     </div>
   </body>
 </html>
